--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
-Too many unhappy things make us learn to complain , 
-but forget to make the change to live a better life!
+Too many unhappy things make us learn to complain , <br>
+but forget to make the change to live a better life!<br>
 
-One day, i walk and walk along the sea side,
-Calm dwon,
-and still face the life with a smile face, 
-study hard,
-go for your goal-to be a better man,
-little by little,
-block by block,
-day by day,
-then you will find the life is so sweat which you really love
-and you grow up to be the better man :-)
+
+One day, i walk and walk along the sea side,<br>
+
+Calm dwon,<br>
+
+and still face the life with a smile face, <br>
+
+study hard,<br>
+
+go for your goal-to be a better man,<br>
+
+little by little,<br>
+
+block by block,<br>
+
+day by day,<br>
+
+then you will find the life is so sweat which you really love<br>
+
+and you grow up to be the better man <br>
+
+and you will get there:-)
