--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 Too many unhappy things make us learn to complain , <br>
+
 but forget to make the change to live a better life!<br>
 
 
-One day, i walk and walk along the sea side,<br>
+One day, I walk and walk along the sea side,<br>
 
 Calm dwon,<br>
 
@@ -10,7 +11,7 @@ and still face the life with a smile face, <br>
 
 study hard,<br>
 
-go for your goal-to be a better man,<br>
+go for the goal-to be a better man,<br>
 
 little by little,<br>
 
@@ -18,8 +19,10 @@ block by block,<br>
 
 day by day,<br>
 
-then you will find the life is so sweat which you really love<br>
+then I  find the life is not the way I alway think,<br>
 
-and you grow up to be the better man <br>
+instead, ii is so sweat  that  I really has fallen in love with.<br>
 
-and you will get there:-)
+:-) <br>
+                                            <h1>Fly<h1>
+
