--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
-<div style="margin-left:50px;"><h2>The Life's Look<h2><div>
-Too many unhappy things make us learn to complain , <br>
-but forget to make the change to live a better life!<br>
-One day, I walk and walk along the sea side,<br>
-Calm dwon,<br>
-and still face the life with a smile face, <br>
-study hard,<br>
-go for the goal-to be a better man,<br>
-little by little,<br>
-block by block,<br>
-day by day,<br>
-then I  find the life is not the way I alway think,<br>
-instead, it is so sweat  that  I really has fallen in love with.<br>
-:-) <br>
-                                            <h5>Fly<h5>
-
+<div style="text-align:center;">
+	<div><h1>The Life's Look</h1></div>
+	<div>
+	        <h2>
+		Too many unhappy things make us learn to complain , <br>
+		but forget to make the change to live a better life!<br>
+		One day, I walk and walk along the sea side,<br>
+		Calm dwon,<br>
+		and still face the life with a smile face, <br>
+		study hard,<br>
+		go for the goal-to be a better man,<br>
+		little by little,<br>
+		block by block,<br>
+		day by day,<br>
+		then I  find the life is not the way I alway think,<br>
+		instead, it is so sweat  that  I really has fallen in love with.<br>
+		:-) <br>
+		</h2>
+	</div>
+	<h5>Fly<h5>
+</div>
