modiffy index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	        <h2>
 		Too many unhappy things make us learn to complain , <br>
 		but forget to make the change to live a better life!<br>
-		One day, I walk and walk along the sea side,<br>
+		One day, I walk and walk along with the sea side,<br>
 		Calm dwon,<br>
 		and still face the life with a smile face, <br>
 		study hard,<br>
@@ -17,5 +17,5 @@
 		:-) <br>
 		</h2>
 	</div>
-	<h5>Fly<h5>
+	<div style="float:right"><span >Fly<span><div>
 </div>
