modiffy index.html

--- a/index.html
+++ b/index.html
@@ -17,5 +17,5 @@
 		:-) <br>
 		</h2>
 	</div>
-	<div style="float:right"><span >Fly<span><div>
+	<div style="float:right"><span style="margin-right:200px;">Fly<span><div>
 </div>
