--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 		</h2>
 	</div>
 	<div style="float:right">
-		<span style="margin-right:200px;"><h1>Fly</h1></span>
+		<h1><span style="margin-right:200px;">Fly</span></h1>
 	</div>
 </div>
