modiffy index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		Calm dwon,<br>
 		and still face the life with a smile face, <br>
 		study hard,<br>
-		go for the goal-to be a better man,<br>
+		go for the goal---to be a better man,<br>
 		little by little,<br>
 		block by block,<br>
 		day by day,<br>
