modiffy index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		Too many unhappy things make us learn to complain , <br>
 		but forget to make the change to live a better life!<br>
 		One day, I walk and walk along with the sea side,<br>
-		Calm dwon,<br>
+		Calm down,<br>
 		and still face the life with a smile face, <br>
 		study hard,<br>
 		go for the goal---to be a better man,<br>
