--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		little by little,<br>
 		block by block,<br>
 		day by day,<br>
-		then I  find the life is not the way I alway think,<br>
-		instead, it is so sweat  that  I really has fallen in love with.<br>
+		then I  find the life is not the way I always think,<br>
+		instead, it is so sweet  that  I really has fallen in love with.<br>
 		:-) <br>
 		</h2>
 	</div>
