--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div style="text-align:center;">
-	<div><h1>The Life's Looks</h1></div>
+	<div><h1>The Life</h1></div>
 	<div>
 	        <h2>
 		Too many unhappy things make us learn to complain , <br>
