modify index.html add time

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 		</h2>
 	</div>
 	<div style="float:right">
-		<h1><span style="margin-right:400px;">Fly</span></h1>
+		---writen by <h1><span style="margin-right:400px;">Fly</span></h1>
+	</div>
+	<div style="float:right">
+		2015-08-30 17:14
 	</div>
 </div>
