modify index.html add time

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 		</h2>
 	</div>
 	<div style="float:right">
-		---writen by <h1><span style="margin-right:400px;">Fly</span></h1>
-	</div>
-	<div style="float:right">
-		2015-08-30 17:14
+		<span style="margin-right:400px;"><h2>--writen by</h2><h1>Fly</h1></span>
+		<p><h2>2015-08-30 17:18</h2></p>
 	</div>
 </div>
