--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</h2>
 	</div>
 	<div style="float:right">
-		<span style="margin-right:400px;"><h2>--writen by</h2><h1>Fly</h1></span>
+		<span style="margin-right:400px;"><h1>Fly</h1></span>
 		<p><h2>2015-08-30 17:18</h2></p>
 	</div>
 </div>
