--- a/api.html
+++ b/api.html
@@ -7,7 +7,7 @@
     window.onload = function(){
         $.ajax({
             type: "GET",
-            url: "112.74.100.71/test.php",
+            url: "http://112.74.100.71/test.php",
 //            data: {username:$("#username").val(), content:$("#content").val()},
             dataType: "json",
             success: function(data){
