add a file todo.html

--- a/todo.html
+++ b/todo.html
@@ -1,2 +1,4 @@
-<ol>        1. <a href="http://www.felixgers.de/teaching/sql/psql.html">psql postgres interactive terminal program</a>      
+<ol>     <li>   1. <a href="http://www.felixgers.de/teaching/sql/psql.html">psql postgres interactive terminal program</a>      
+</li>
+<li>2. <a href="https://help.ubuntu.com/community/PostgreSQL">simple document</a></li>
 </ol>          
