--- a/api.html
+++ b/api.html
@@ -3,6 +3,7 @@
     <script src="./jquery-1.11.3.min.js"></script>
 </head>
 <body>
+<h1>为什么没变，缓存？？</h1>
 <div id="content">content:</div>
 <script>
     window.onload = function(){
