--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div style="text-align:center;">
-	<div><h1>The Life</h1></div>
+	<div><h1>The Life</h1><a href="/2016.html">next-2016</a></div>
 	<div>
 	        <h2>
 		Too many unhappy things make us learn to complain , <br>
@@ -20,7 +20,4 @@
 		<span style="margin-right:700px;"><h1>Fly</h1></span>
 		<p><h2>2015-08-30 17:18</h2></p>
 	</div>
-</div>
-<div style="text-align:center">
-<a href="/2016.html">next</a>
 </div>
