--- a/api.html
+++ b/api.html
@@ -9,7 +9,8 @@
     window.onload = function(){
         $.ajax({
             type: "GET",
-            url: "http://112.74.100.71:81/test.php",
+            //url: "http://112.74.100.71:81/test.php",
+            url: "http://120.79.14.84:81/test.php",
             success: function(data){
                $('#content').html(data.data);
             }
