add 2018 key words

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div style="text-align:center;">
-	<div><h1>The Life</h1><a href="/2016.html">next-2016</a></div>
+	<div><h1>The Life</h1><a href="/2016.html">next-2016</a><a href="/2018.html">now-2018</a></div>
 	<div>
 	        <h2>
 		Too many unhappy things make us learn to complain , <br>
